crates/alef-backend-kotlin-android/tests/snapshots/snapshot_test__snapshot_basic__packages__kotlin_android__src__main__java__dev__kreuzberg__DemoErrorException.java.snap
---
source: crates/alef-backend-kotlin-android/tests/snapshot_test.rs
expression: "&file.content"
---
// DO NOT EDIT - auto-generated by alef
package dev.kreuzberg;

/**
 * Errors emitted by demo operations.
 */
public class DemoErrorException extends Exception {
    /** Creates a new DemoErrorException with the given message. */
    public DemoErrorException(final String message) {
        super(message);
    }

    /** Creates a new DemoErrorException with the given message and cause. */
    public DemoErrorException(final String message, final Throwable cause) {
        super(message, cause);
    }
}
