crates/alef-backend-kotlin-android/tests/snapshots/snapshot_test__snapshot_basic__packages__kotlin_android__src__main__java__dev__kreuzberg__DemoRs.java.snap
---
source: crates/alef-backend-kotlin-android/tests/snapshot_test.rs
expression: "&file.content"
---
// This file is auto-generated by alef — DO NOT EDIT.
// To regenerate: alef generate
// To verify freshness: alef verify --exit-code
// Issues & docs: https://example.invalid/alef

package dev.kreuzberg;

import java.lang.foreign.Arena;
import java.lang.foreign.MemorySegment;
public final class DemoRs {
    private DemoRs() { }

    public static String process(final String input, final int count) throws DemoRsException {
        try (var arena = Arena.ofShared()) {
            var cinput = arena.allocateFrom(input);
            var resultPtr = (MemorySegment) NativeLib.DEMO_PROCESS.invoke(cinput, count);
            if (resultPtr.equals(MemorySegment.NULL)) {
                checkLastError();                return null;            }
            String str = resultPtr.reinterpret(Long.MAX_VALUE).getString(0);
            NativeLib.DEMO_FREE_STRING.invoke(resultPtr);
            return str;
        } catch (Throwable e) {
            throw new DemoRsException("FFI call failed", e);
        }
    }

    // Helper methods for FFI marshalling

    private static void checkLastError() throws Throwable {
        int errCode = (int) NativeLib.DEMO_LAST_ERROR_CODE.invoke();
        if (errCode != 0) {
            var ctxPtr = (MemorySegment) NativeLib.DEMO_LAST_ERROR_CONTEXT.invoke();
            String msg = ctxPtr.reinterpret(Long.MAX_VALUE).getString(0);
            switch (errCode) {
                case 1 -> throw new InvalidInputException(msg);
                case 2 -> throw new ConversionErrorException(msg);
                default -> throw new DemoRsException(errCode, msg);
            }
        }
    }
}
