crates/alef-backend-kotlin-android/tests/snapshots/snapshot_test__snapshot_basic__packages__kotlin_android__src__main__java__dev__kreuzberg__DemoRsException.java.snap
---
source: crates/alef-backend-kotlin-android/tests/snapshot_test.rs
expression: "&file.content"
---
// This file is auto-generated by alef — DO NOT EDIT.
// To regenerate: alef generate
// To verify freshness: alef verify --exit-code
// Issues & docs: https://example.invalid/alef
package dev.kreuzberg;

/** Exception thrown by DemoRs. */
@SuppressWarnings("checkstyle:LineLength")
public class DemoRsException extends Exception {
    /** The error code. */
    private final int code;

    /** Creates a new DemoRsException. */
    public DemoRsException(final int code, final String message) {
        super(message);
        this.code = code;
    }

    /** Creates a new DemoRsException with a cause. */
    public DemoRsException(final String message, final Throwable cause) {
        super(message, cause);
        this.code = -1;
    }

    /** Returns the error code. */
    public int getCode() {
        return code;
    }
}
