crates/alef-backend-kotlin-android/tests/snapshots/snapshot_test__snapshot_basic__packages__kotlin_android__src__main__java__dev__kreuzberg__ProcessingFailedException.java.snap
---
source: crates/alef-backend-kotlin-android/tests/snapshot_test.rs
expression: "&file.content"
---
// DO NOT EDIT - auto-generated by alef
package dev.kreuzberg;

/**
 * Processing encountered an error.
 */
public class ProcessingFailedException extends DemoErrorException {
    /** Creates a new ProcessingFailedException with the given message. */
    public ProcessingFailedException(final String message) {
        super(message);
    }

    /** Creates a new ProcessingFailedException with the given message and cause. */
    public ProcessingFailedException(final String message, final Throwable cause) {
        super(message, cause);
    }
}
